--- a/src/main/resources/templates/reporting/reporting.vm
+++ b/src/main/resources/templates/reporting/reporting.vm
@@ -86,7 +86,14 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:reportin
                     </span>
                 </div>
                 <div class="aui-page-header-main">
-                    <h1>Reporting</h1>
+                    <a href="#reporting_menu" aria-owns="reporting_menu" aria-haspopup="true" class="h1-button aui-button aui-button-link aui-style-default aui-dropdown2-trigger"><h1>Reporting</h1></a>
+                    <div id="reporting_menu" class="aui-style-default aui-dropdown2" style="top: 150px">
+                      <ul class="aui-list-truncate">
+                        <li><a href="JiraTimetrackerWorklogsWebAction!default.jspa">Missing Days Report</a></li>
+                    	<li><a href="JiraTimetrackerChartWebAction!default.jspa">Chart Report</a></li>
+                    	<li><a href="JiraTimetrackerTableWebAction!default.jspa">Table Report</a></li>
+                      </ul>
+                	</div>
                 </div>                
                 <div class="aui-page-header-actions">
 					<div class="aui-buttons">
