v2.x-JIRAPLUGIN-291-MISSINGS_AUI_UPDATE
Missings report extended with hours.
Added better paging solution.

--- a/src/main/resources/css/reporting.css
+++ b/src/main/resources/css/reporting.css
@@ -26,6 +26,14 @@
     border-top: 1px solid #ccc; 
 }
 
+.missings-paging-strong{
+    bottom: 8px;
+}
+
+.missings-paging~.missings-paging{
+    margin-left: 0px !important;
+}
+
 .container {
     width: 20%;
     min-width: 20rem;
