--- a/src/main/resources/templates/reporting/missing_worklogs_report.vm
+++ b/src/main/resources/templates/reporting/missing_worklogs_report.vm
@@ -85,9 +85,9 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:missing_
         </div>
      </div>
   </header>
-  
-   <div class="missing-search-criteria-container">
-            <form action="JiraTimetrackerWorklogsWebAction.jspa?dateFromFormated=$dateFromFormated&dateToFormated=$dateToFormated&actualPage=$actualPage" class="aui top-label reporting-form" id="reporting-form" method="get">
+  <!-- ?dateFromFormated=$dateFromFormated&dateToFormated=$dateToFormated&actualPage=$actualPage -->
+   <form action="JiraTimetrackerWorklogsWebAction.jspa" class="aui top-label reporting-form" id="reporting-form" method="get">
+     <div class="missing-search-criteria-container">
                  #if(!$message.isEmpty())
                    <div id="error_message">
                      $i18n.getText($message) $messageParameter
@@ -130,11 +130,13 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:missing_
                     </div>
                      <div class="aui-group">
                         <div class="aui-item">
-                            <button id="search" tabindex="3" class="aui-button aui-button-primary" onclick="_paq.push(['trackEvent', 'User', 'Missings']); ">$i18n.getText('plugin.search')</button> <!-- Submit the search form -->
+                            <button id="search" name="search" type="submit" tabindex="3" class="aui-button aui-button-primary" onclick="_paq.push(['trackEvent', 'User', 'Missings']); ">$i18n.getText('plugin.search')</button> <!-- Submit the search form -->
                         </div>
+                        <input type="hidden" id="dateFromFormated" name="dateFromFormated" value="$dateFromFormated" />
+                        <input type="hidden" id="dateToFormated" name="dateToFormated" value="$dateToFormated" />
+                        <input type="hidden" id="actualPage" name="actualPage" value="$actualPage"/>
                     </div>
                 </div>
-            </form>
         </div>
 
         <div class="aui-page-panel">
@@ -143,14 +145,14 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:missing_
                 <div class="container">
                     <div class="table-content">
                         <div id="statistics-message" class="missing-message">
-	                       $i18n.getText("plugin.statistics.message") $statisticsMessageParameter
+	                       $i18n.getText("plugin.statistics.message") $paging.resultSize
                         </div>
                         <div id="results-wrap">
                             <table id="missing-worklog-table" class="aui missing-worklog-table">
                               <thead>
                                 <tr>
-                                  <th>$i18n.getText("plugin.dates")</th>
-                                  <th>$i18n.getText("plugin.dates")</th> <!-- New feature, feedback request -->
+                                  <th>$i18n.getText("plugin.missings.dates")</th>
+                                  <th>$i18n.getText("plugin.missings.hours")</th> <!-- New feature, feedback request -->
                                 </tr>
                               </thead>
                           #if($showDatesWhereNoWorklog.size() == 0)
@@ -158,12 +160,12 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:missing_
                             <div id="message" class="message">$i18n.getText("plugin.no.dates")</div><!-- Change to info panel? -->
                           #else
                               <tbody>
-                                #foreach ($date in $showDatesWhereNoWorklog)
+                                #foreach ($missings in $showDatesWhereNoWorklog)
                                   <tr>
                                     <td>
-                                      <a href="JiraTimetrackerWebAction.jspa?dateFormatted=$date">$date</a>
+                                      <a href="JiraTimetrackerWebAction.jspa?dateFormatted=$outlookDate.formatDMY($missings.date)">$outlookDate.formatDMY($missings.date)</a>
                                     </td>
-                                    <td>7</td>
+                                    <td>$missings.hour</td>
                                   </tr>
                                 #end
                               <tbody>
@@ -173,32 +175,66 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:missing_
                         <div class="aui-group aui-group-split count-pagination missing-count">
                             <div class="aui-item">
                                 <span class="results-count-text">
-                                    <span class="results-count results-count-start">1</span> –
-                                    <span class="results-count results-count-end">50</span> of 
-                                    <span class="results-count results-count-total results-count-link">100</span>
+                                    <span class="results-count results-count-start">$paging.start</span> –
+                                    <span class="results-count results-count-end">$paging.end</span> of 
+                                    <span class="results-count results-count-total results-count-link">$paging.resultSize</span>
                                 </span>
                             </div>
                             <div class="aui-item">
-                                <div class="pagination" data-displayable-total="100"> 
-                                    <strong title="Issues 1 - 50">1</strong> 
-                                    <a href="/issues/?jql=&amp;startIndex=50" data-page="2" data-start-index="50" title="Issues 51 - 100">2</a>
-                                    <a href="/issues/?jql=&amp;startIndex=50" data-start-index="50" class="icon icon-next" title="Go to page 2 of 59">
+                              <div class="pagination">
+                                    #set($wdMaxPageNumber = $paging.maxPageNumber)
+                                    
+                                    #if ( $wdMaxPageNumber )
+                                      #set($wdActPageNumber = $paging.actPageNumber)
+                                      #if ( $wdActPageNumber - 2 < 1 )
+                                        #set($inStart = 1)
+                                      #else
+                                        #set($inStart = $wdActPageNumber - 2)
+                                      #end
+                                      #if ( $wdActPageNumber + 2 > $wdMaxPageNumber )
+                                        #set($inEnd = $wdMaxPageNumber)
+                                      #else
+                                        #set($inEnd = $wdActPageNumber + 2)
+                                      #end
+                                      #if ( $wdActPageNumber < 3 )
+                                        #if ($wdMaxPageNumber > 5) 
+                                          #set($inEnd = 5) 
+                                        #else 
+                                          #set($inEnd = $wdMaxPageNumber) 
+                                        #end
+                                      #end
+                                      #if ( $wdActPageNumber + 2 >= $wdMaxPageNumber && $wdMaxPageNumber - 4 > 0 ) 
+                                        #set($inStart = $wdMaxPageNumber - 4)
+                                      #end
+                                      #if ( $wdActPageNumber > 1 )
+                                        #set($pageBack = $page - 1)
+                                    <button id="pageBack" name="pageBack" style="submit" class="missings-paging aui-button aui-button-link">
+                                        <span class="aui-icon aui-icon-small aui-iconfont-arrows-left"></span>
+                                    </button>
+                                      #end
+                                      #foreach ( $page in [$inStart..$inEnd] ) 
+                                        #if ( $wdActPageNumber == $page )
+                                    <strong class="missings-paging-strong">$page</strong>
+                                        #else
+                                    <button id="paging" name="paging" style="submit" value="$page" class="missings-paging aui-button aui-button-link">$page</button>
+                                        #end
+                                      #end
+                                      #if ( $wdActPageNumber < $wdMaxPageNumber )
+                                       #set($pageNext = $page + 1)
+                                    <button id="pageNext" name="pageNext" style="submit" class="missings-paging aui-button aui-button-link">
                                         <span class="aui-icon aui-icon-small aui-iconfont-arrows-right"></span>
-                                    </a>
+                                    </button>
+                                      #end
+                                    #end
                                 </div>
-                            </div>
-                        </div>
-                        #if($showDatesWhereNoWorklog.size() != 0)
-                          <div class="message">
-                            <input type="submit" id="pageBack" name="pageBack" value="<" class="button" /> $actualPage / $numberOfPages 
-                            <input type="submit" id="pageNext" name="pageNext" value=">" class="button" />
+                              </div>
                           </div>
-                        #end
-                    </div>
-                </div>
-            </section>
+                      </div>
+                  </div>
+              </section>
+            </div>
           </div>
-        </div>
+        </form>
 	  </div>
    <script type="text/javascript" src="$issueCollectorSrc"></script>
   </div>
